--- a/_programs/3.md
+++ b/_programs/3.md
@@ -15,7 +15,7 @@ caption:
 
 ## Game online with the community
 
-We offer a no-cost moderated Minecraft server to our community members! 
+We offer no-cost moderated Minecraft servers to our community members! 
 
 Engaging with a non-profit Minecraft server to explore STEM learning combines the creative and collaborative nature of Minecraft with the principles of STEM education. Within this virtual world, participants can build complex structures, experiment with redstone circuitry, and even simulate scientific phenomena, all while learning valuable concepts in a fun and immersive way.
 
@@ -26,7 +26,7 @@ Engaging with a non-profit Minecraft server to explore STEM learning combines th
       action="https://formspree.io/{% if site.formspree_form_path_mc %}{{ site.formspree_form_path_mc }}{% else %}{{ site.email }}{% endif %}"
       novalidate="novalidate" method="POST">
       <!--name="sentMessage"-->
-      <div class="row justify-content-center"><div class="col-lg-6"><h5>Please fill out the form below to request the server information.</h5></div></div>
+      <div class="row justify-content-center"><div class="col-lg-6"><h5>Please fill out the form below to request our server information, or (with justification) we can build one for you!</h5></div></div>
       <div class="row justify-content-center">
         <div class="col-lg-6 ">
           <div class="form-group">
