--- a/_resources/16.md
+++ b/_resources/16.md
@@ -2,7 +2,7 @@
 id: 16
 title: Relay
 subtitle: Create Across Multiple Social Networks
-link: https://script.google.com/a/macros/digitaleducationsafety.org/s/AKfycbysoYg7uy3M1hNLAqL3I7tXpSdTSnmCA2FJZylU9dXe7X3VKKgKgh3QSiJnNfSlE5nn0g/exec
+link: https://www.appsheet.com/newshortcut/3e630a76-3811-4660-bd4a-9b8f97bb1b41
 image: https://digitaleducationsafety.org/assets/img/logo.jpg
 
 caption:
