--- a/_programs/2.md
+++ b/_programs/2.md
@@ -26,7 +26,7 @@ NFTs enable non-profits to create unique and collectible digital assets, such as
 By leveraging algorithms and programming used in NFT creation, learners not only gain a deeper understanding of computational concepts but also develop the technical skills required for asset creation in the digital realm. This educational endeavor goes beyond the classroom, as it integrates marketing strategies, allowing students to showcase their creations and understand the value proposition of their NFTs. Ultimately, such a project encourages innovation and entrepreneurial thinking while bridging the gap between traditional education and the dynamic world of blockchain technology, ensuring that STEM and STEAM education remains both relevant and engaging for future generations.
 </p>
 <p>
-<a href="https://brag.charity/gallery.html">brag.charity</a> is a Digital Assets Marketplace and a fundraising program for the Digital Education & Safety Foundation. You can experience <a href="https://brag.charity/gallery.html">brag.charity</a> below.
+<a href="https://brag.charity/gallery.html">brag.charity</a> is a Digital Assets Marketplace and a fundraising program for the Digital Education & Safety Foundation. You can experience <a href="https://brag.charity/">brag.charity</a> below.
 
 </p>
 </div>
