Now requiring message for server.

--- a/_programs/3.md
+++ b/_programs/3.md
@@ -41,6 +41,13 @@ Engaging with a non-profit Minecraft server to explore STEM learning combines th
               required="required" data-validation-required-message="{{ site.data.sitetext.contact.email-validation | default: "Please enter your email address." }}">
             <p class="help-block text-danger"></p>
           </div>
+
+          <div class="form-group">
+            <textarea name="message" placeholder="{{ site.data.sitetext.contact.message | default: "Message*" }}" class="form-control" id="message"
+              required="required" data-validation-required-message="{{ site.data.sitetext.contact.message-validation | default: "Please enter your justification." }}"></textarea>
+            <p class="help-block text-danger"></p>
+          </div>
+
         </div>
         <input type="hidden" name="_subject" id="email-subject"
           value="{{ site.data.sitetext.contact.subject | default: "Contact Form Submission" }}">
