Cleaning up resources.

--- a/_resources/20.md
+++ b/_resources/20.md
@@ -2,12 +2,12 @@
 id: 20
 title: How to Make a Game in 1 Hour
 subtitle: A flappy-bird clone made with Scratch Jr. Android app for digitaleducationsafety.org!
-image: https://i9.ytimg.com/vi_webp/BWXAXTTp_b4/mq1.webp?sqp=CJCh-r8G&rs=AOn4CLCK23q7o5SUPBaJF-vm3aPQ3xCuBg
+image: https://img.youtube.com/vi/BWXAXTTp_b4/0.jpg
 link: https://youtu.be/BWXAXTTp_b4
 alt: 
 
 caption:
-  thumbnail: https://i9.ytimg.com/vi_webp/BWXAXTTp_b4/mq1.webp?sqp=CJCh-r8G&rs=AOn4CLCK23q7o5SUPBaJF-vm3aPQ3xCuBg
+  thumbnail: https://img.youtube.com/vi/BWXAXTTp_b4/0.jpg
 
 tags: [all, digitaledsafety]
 categories: videos
