--- a/_resources/21.md
+++ b/_resources/21.md
@@ -2,12 +2,12 @@
 id: 21
 title: "The Digital Education & Safety Foundation plays \"Minecraft Education: The Show Must Go On\"!"
 subtitle: "This is a play-through of \"Minecraft Education: The Show Must Go On\"!"
-image: https://i9.ytimg.com/vi/xUIf9NJrlXg/mqdefault.jpg?v=67c5d913&sqp=CLyj-r8G&rs=AOn4CLB5VPwXHDHWzINRZ-GpTOk2qXQPpQ
+image: https://img.youtube.com/vi/xUIf9NJrlXg/0.jpg
 link: https://youtube.com/live/xUIf9NJrlXg
 alt: 
 
 caption:
-  thumbnail: https://i9.ytimg.com/vi/xUIf9NJrlXg/mqdefault.jpg?v=67c5d913&sqp=CLyj-r8G&rs=AOn4CLB5VPwXHDHWzINRZ-GpTOk2qXQPpQ
+  thumbnail: https://img.youtube.com/vi/xUIf9NJrlXg/0.jpg
 
 tags: [all, digitaledsafety]
 categories: videos
