--- a/_resources/30.md
+++ b/_resources/30.md
@@ -1,7 +1,7 @@
 ---
 id: 30
 title: Info
-subtitle: Create Across Multiple Social Networks
+subtitle: Discover, curate, and control your feed with a powerful real-time aggregator, right here in one tab.
 link: https://www.appsheet.com/newshortcut/c38b52d7-969e-4266-93ae-815ac6822109
 image: https://digitaleducationsafety.org/assets/img/logo.jpg
 
