--- a/_programs/3.md
+++ b/_programs/3.md
@@ -59,6 +59,9 @@ Engaging with a non-profit Minecraft server to explore STEM learning combines th
           <button id="sendMessageButton" class="btn btn-primary btn-med text-uppercase"
             type="submit">{{ site.data.sitetext.contact.submit | default: "Submit" }}</button>
         </div>
+        <div class="col-lg-12 text-center">
+          <div id="turnstile-container-mc"></div>
+        </div>
       </div>
     </form>
   </div>
