Revise AI STEM Mentor project metadata
Updated project details for AI STEM Mentor, including title, subtitle, and image paths.

--- a/_programs/6.md
+++ b/_programs/6.md
@@ -1,19 +1,21 @@
 ---
 layout: project
 id: 6
-title: AI STEM Mentor
-subtitle: AI Assistant
-image: /assets/img/portfolio/06-full.jpg
+title: AI
+subtitle: AI
+image: /assets/img/portfolio/05-full.jpg
 description: "The Digital Education Safety AI STEM Assistant is an advanced AI-powered tool designed to help students and educators navigate the complexities of STEM education."
 caption:
-  title: AI STEM Mentor
-  subtitle: AI Assistant
-  thumbnail: /assets/img/portfolio/06-thumbnail.jpg
+  title: AI
+  subtitle: AI
+  thumbnail: /assets/img/portfolio/05-thumbnail.jpg
 ---
 
 ## Empowering Education with AI
 
-Welcome to the Digital Education & Safety Foundation AI STEM portal. Our AI STEM Assistant is optimized for brevity and educational safety, designed to assist your learning journey in Science, Technology, Engineering, and Mathematics.
+AI can help create a more inclusive, accessible, and personalized education system. With cutting-edge AI-powered tools and resources, students and educators can unlock new possibilities for creativity, critical thinking, and innovation.
+
+Our AI STEM Assistant is optimized for brevity and educational safety, designed to assist your learning journey in Science, Technology, Engineering, Mathematics, and the Arts.
 
 <div class="text-center mt-5">
 <a href="https://ai.digitaleducationsafety.org" class="btn btn-primary btn-xl" target="_blank">Launch AI STEM Assistant</a>
