Change subtitle and caption for AI project
Updated subtitle and caption for the AI project.

--- a/_programs/6.md
+++ b/_programs/6.md
@@ -2,12 +2,12 @@
 layout: project
 id: 6
 title: AI
-subtitle: AI
+subtitle: Projects 
 image: /assets/img/portfolio/05-full.jpg
 description: "The Digital Education Safety AI STEM Assistant is an advanced AI-powered tool designed to help students and educators navigate the complexities of STEM education."
 caption:
   title: AI
-  subtitle: AI
+  subtitle: Entrepreneurship
   thumbnail: /assets/img/portfolio/05-thumbnail.jpg
 ---
 
